# rosplan_tutorial

./: CMakeLists.txt  README  README.md  comercial_robots-using_ros.txt  package.xml  setup.py
common/pddl/: domain.pddl
common/pddl/problems/: .gitignore  example_problem.pddl  minimum_required_facts.pddl  trivial.pddl
ros/doc/: README.md
ros/launch/: gpsr_demo.launch  gpsr_rosplan_example.launch  ips.launch  simulated_action.launch
ros/scripts/: test.sh
