<?xml version="1.0"?>
<package>
 <name>gpsr_rosplan_example</name>
 <version>1.0.0</version>
 <description>
 TODO!
 </description>

 <license>GPLv3</license>

 <author email="olima@isr.tecnico.ulisboa.pt">Oscar Lima</author>
 <maintainer email="olima@isr.tecnico.ulisboa.pt">Oscar Lima</maintainer>

 <buildtool_depend>catkin</buildtool_depend>

 <build_depend>TODO</build_depend>

 <run_depend>TODO</run_depend>

</package>
